--- a/gris.htm
+++ b/gris.htm
@@ -19,6 +19,6 @@ body {
 <p class="style1"><a href="contacto2.htm" target="bottomFrame">Contacto</a> </p>
 <p class="style1"><a href="negro.htm" target="bottomFrame">Inicio</a></p>
 <p class="style1"><a href="videos.htm" target="bottomFrame">Videos</a></p>
-<p class="style1"><a href="musica.htm">Musica</a></p>
+<p class="style1"><a href="musica.htm" target="bottomFrame">Musica</a></p>
 </body>
 </html>
