--- a/videos.htm
+++ b/videos.htm
@@ -29,12 +29,14 @@ MM_reloadPage(true);
 </head>
 
 <body>
-<div id="Layer1" style="position:absolute; left:292px; top:103px; width:771px; height:435px; z-index:1">
-  <embed src="Halo%20Infinite%20Become%20&#8211;%20Step%20Inside%20Trailer.mp4" width="771" height="455"></embed>
+<div id="Layer1" style="position:absolute; left:421px; top:144px; width:538px; height:343px; z-index:1">
+  <embed src="INSANE%20F-22%20Raptor%20Hype%20Video.mp4" width="537" height="344"></embed>
 </div>
 <div align="center" class="style1">
   <p class="style2">Videos
 </p>
+  <p class="style2">&nbsp;</p>
+  <p class="style2">&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;  </p>
 </div>
