--- a/musica.htm
+++ b/musica.htm
@@ -15,9 +15,22 @@ body {
 }
 -->
 </style>
+<script language="JavaScript" type="text/JavaScript">
+<!--
+function MM_reloadPage(init) {  //reloads the window if Nav4 resized
+  if (init==true) with (navigator) {if ((appName=="Netscape")&&(parseInt(appVersion)==4)) {
+    document.MM_pgW=innerWidth; document.MM_pgH=innerHeight; onresize=MM_reloadPage; }}
+  else if (innerWidth!=document.MM_pgW || innerHeight!=document.MM_pgH) location.reload();
+}
+MM_reloadPage(true);
+//-->
+</script>
 </head>
 
 <body>
+<div id="Layer1" style="position:absolute; left:496px; top:180px; width:351px; height:92px; z-index:1">
+  <embed src="Sleep%20Away.mp3" width="350" height="93"></embed>
+</div>
 <div align="center" class="style1">
   <p>Musica</p>
   <p>&nbsp;</p>
