--- a/gris.htm
+++ b/gris.htm
@@ -20,6 +20,6 @@ body {
 <p class="style1"><a href="negro.htm" target="bottomFrame">Inicio</a></p>
 <p class="style1"><a href="videos.htm" target="bottomFrame">Videos</a></p>
 <p class="style1"><a href="musica.htm" target="bottomFrame">Musica</a></p>
-<p class="style1"><a href="animaciones.htm">Flash</a></p>
+<p class="style1"><a href="animaciones.htm" target="bottomFrame">Flash</a></p>
 </body>
 </html>
